Bug 1767467 - Fix hardware H264 decoding support detection on Windows. r=alwu, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D145383